src/objects/Vehicle_Check__c.object
<CustomObject>
    <fields>
        <fullName>Car_Age__c</fullName>
        <label>Car Age</label>
        <picklist>
            <picklistValues>
                <fullName>Under 3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 3 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentation_Checked__c</fullName>
        <label>Documentation Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Next_Check__c</fullName>
        <formula>IF(ISBLANK(Documentation_Checked__c),
        Documentation_Checked__c,
        IF(MONTH(Documentation_Checked__c)=2 &amp;&amp; DAY(Documentation_Checked__c)=29,
           DATE(YEAR(Documentation_Checked__c)+1, 2, 28),
           DATE(YEAR(Documentation_Checked__c)+1, MONTH(Documentation_Checked__c), DAY(Documentation_Checked__c)) - 1
        )
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Documentation Next Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Expires__c</fullName>
        <label>Insurance Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Vehicle_Check_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Vehicle Check ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVIS_Account_No__c</fullName>
        <externalId>true</externalId>
        <label>NVIS Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Status__c</fullName>
        <formula>TEXT(Role__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Vehicle Checks</relationshipLabel>
        <relationshipName>Vehicle_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MiniBus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Training_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Training Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicle Checks</relationshipLabel>
        <relationshipName>Vehicle_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Registration__c</columns>
        <columns>Volunteer__c</columns>
        <columns>Documentation_Checked__c</columns>
        <columns>Documentation_Next_Check__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Document_Checks_Due_Next_Month</fullName>
        <columns>NAME</columns>
        <columns>Volunteer__c</columns>
        <columns>Registration__c</columns>
        <columns>Documentation_Checked__c</columns>
        <columns>Documentation_Next_Check__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Documentation_Next_Check__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>Role_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Document Checks Due Next Month</label>
    </listViews>
    <listViews>
        <fullName>Jamie_Oliver</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Registration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>equals</operation>
        </filters>
        <label>Jamie Oliver</label>
    </listViews>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Vehicle Check No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>